hphp/hack/test/typecheck/inout/shapes_remove_key1.php.exp
File "shapes_remove_key1.php", line 8, characters 6-8:
This shape doesn't have a field `x` (Typing[4108])
  File "shapes_remove_key1.php", line 6, characters 3-34:
  The shape is defined here
